objects/vlocity_ins__Application__c.object
<CustomObject>
    <description>An instance of an application submitted by a customer, agent/broker or a provider. For example, an application may be submitted by a customer to apply for individual insurance. An application may be submitted by an agent/broker to start the appointment process. An application may be submitted by a provider to become an in-network provider for one or more networks. The Application object is used to track the party&apos;s request through the approval process.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicationReferenceNumber__c</fullName>
        <label>Application Reference Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicationTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Template</label>
        <referenceTo>vlocity_ins__ApplicationTemplate__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FilesMap__c</fullName>
        <label>Files Map</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FullJSON__c</fullName>
        <label>Full JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONData__c</fullName>
        <label>Data JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity OmniScript</label>
        <referenceTo>vlocity_ins__OmniScript__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptLanguage__c</fullName>
        <formula>TEXT(vlocity_ins__OmniScriptId__r.vlocity_ins__Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OmniScriptLanguage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OwnerLink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  OwnerId ,    Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName  , &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryApplicantLink__c</fullName>
        <description>This is used for drill down.</description>
        <formula>IF( ISBLANK( vlocity_ins__PrimaryPartyId__r.vlocity_ins__AccountId__r.Id ), HYPERLINK(&quot;/&quot; &amp;  vlocity_ins__PrimaryPartyId__r.vlocity_ins__ContactId__r.Id ,  vlocity_ins__PrimaryPartyId__r.Name   , &quot;_parent&quot;), HYPERLINK(&quot;/&quot; &amp; vlocity_ins__PrimaryPartyId__r.vlocity_ins__AccountId__r.Id, vlocity_ins__PrimaryPartyId__r.Name , &quot;_parent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary Applicant for this Application. For example, the Provider Contact in Provider Enrollment Applications.</description>
        <label>Primary Applicant Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryPartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product for which the prospect or customer is applying.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ScreeningResult__c</fullName>
        <label>Screening Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Manual Review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Summary__c</fullName>
        <description>Summary of the reason for screening failure.</description>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Individual Health</fullName>
                </value>
                <value>
                    <fullName>Individual Dental</fullName>
                </value>
                <value>
                    <fullName>Individual Provider</fullName>
                </value>
                <value>
                    <fullName>Individual Vision</fullName>
                </value>
                <value>
                    <fullName>Medicare Supplemental</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Medicare Part D</fullName>
                </value>
                <value>
                    <fullName>Organizational Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__ApplicationReferenceNumber__c</columns>
        <columns>vlocity_ins__Type__c</columns>
        <columns>vlocity_ins__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>